# ToudaiVocadou

./: .gitignore  Cargo.toml  README.md  eslint.config.mjs  flake.nix  index.html  members.html  script.js  stylelint.config.mjs  styles.css
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 0ckdn3x6ai7ddbihwrgilsyqyw56rv6v-source  4w6dn0aiyasb2dk8lr1fjj60d3hj82hr-source  92arvcpsgpx9sirbx4672bi0zqsjijz9-source  dcdhmdxwk5vmsnfrsydis1zpxv1mkr4s-source
.github/workflows/: check-build.yml
a/albums/: m3.md
a/js/: script.js  scroll.js
a/members/: Henkyokuten.md  l1npengtul.md
a/styles/: style.css
crates/vocadou-core/: Cargo.toml
crates/vocadoubot/: Cargo.toml
css/: style.css
js/: script.js
member-detail/: henkyokuten.html  kaliman.html  knoeze.html  l1npengtul.html  mayday.html  mimori.html
members/: Auauo.md  Henkyokuten.md  Mayday.md  Mitsumori.md  _例文  kailman.md  knoeze.md  l1npengtul.md
posts/: test.md
src/: album.rs  die_linky.rs  featured_work.rs  main.rs  member.rs  metadata.rs  news.rs  post.rs  read.rs  sitemap.rs  util.rs  work.rs
src/templates/: base.rs  error.rs  index.rs  join.rs  members.rs  mod.rs  news.rs  works.rs
src/templates/functions/: embed.rs  member.rs  mod.rs  sns.rs
src/templates/partials/: footer.rs  head.rs  mod.rs  navbar.rs
works/: _例文  test.md
