[package]
name = "toudaivocadou"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.8"
pulldown-cmark = "0.13.0"
maud = "0.27.0"
toml = "0.8.20"
hauchiwa = "0.4.0"
url = "2.5.4"
chrono = "0.4.40"
memmap2 = "0.9.5"
eyre = "0.6.12"
seahash = "4.1.0"
urlencoding = "2.1.3"
anyhow = "1.0"
camino = "1.1.9"
serde_json = "1.0"
log = "0.4.27"

[dependencies.minijinja]
version = "2.9.0"
features = ["unicode", "speedups", "loader"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.reqwest]
version = "0.12.15"
features = ["blocking", "json", "rustls-tls-webpki-roots"]
default-features = false