[package]
name = "toudaivocadou"
version = "0.1.0"
edition = "2024"

[dependencies]
pulldown-cmark = "0.13.0"
maud = "0.27.0"
toml = "0.8.20"
url = "2.5.4"
urlencoding = "2.1.3"
anyhow = "1.0"
camino = "1.1.9"
serde_json = "1.0"
clap = { version = "4.5.37", features = ["derive"] }
ammonia = "4.1.0"
seahash = "4.1.0"
base64 = "0.22.1"

[dependencies.hauchiwa]
git = "https://github.com/l1npengtul/hauchiwa.git"
branch = "main"

[dependencies.minijinja]
version = "2.9.0"
features = ["unicode", "speedups", "loader"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.reqwest]
version = "0.12.15"
features = ["blocking", "json", "rustls-tls-webpki-roots"]
default-features = false