[package]
name = "toudaivocadou"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["crates/*"]

[dependencies]
pulldown-cmark = "0.13.0"
maud = "0.27.0"
toml = "0.9.8"
url = "2.5.7"
urlencoding = "2.1.3"
anyhow = "1.0"
camino = "1.2.1"
serde_json = "1.0"
clap = { version = "4.5.52", features = ["derive"] }
ammonia = "4.1.2"
seahash = "4.1.0"
base64 = "0.22.1"
rss = "2.0.12"
log = "0.4.28"
env_logger = "0.11.8"
lol_html = "2.7.0"

[dependencies.hauchiwa]
version = "0.7.0"
features = ["asyncrt", "styles", "images", "reload", "server"]

[dependencies.minijinja]
version = "2.12.0"
features = ["unicode", "speedups", "loader"]

[dependencies.minijinja-contrib]
version = "2.12.0"
features = ["pycompat"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.reqwest]
version = "0.12.24"
features = ["blocking", "json", "rustls-tls-webpki-roots"]
default-features = false
